--- a/src/components/FriendDetails/FriendDetails.css
+++ b/src/components/FriendDetails/FriendDetails.css
@@ -1,5 +1,5 @@
-.FriendDetails-container {
+/* .FriendDetails-container {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 10px;
-}
+} */
